--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,10 +1,22 @@
 .superInput {
-
+    border: none;
+    background-color: skyblue;
+    color: azure;
+    padding: 10px;
+    outline: 0;
+    outline-offset: 0;
+    border-radius: 10px;
+    font-size: 1em;
 }
 
 .errorInput {
-    border: 3px solid lime;
-    background: red;
+    border: 3px solid dimgray;
+    background-color: crimson;
+    color: black;
+    padding: 10px;
+    outline: 0;
+    outline-offset: 0;
+    border-radius: 10px;
 }
 
 .error {
