--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,7 +1,11 @@
 .default {
-
+    background: skyblue;
 }
 
 .red {
     background: red;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 10px;
+    outline: 0;
 }
