--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -1,3 +1,34 @@
 .message {
+    display: flex;
+    align-items: flex-end;
+}
+
+.avatar img {
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
 
 }
+
+.messageArea {
+    display: flex;
+    background-color: darkgreen;
+    border-radius: 15px 15px 15px 0;
+    padding: 15px;
+    align-items: flex-end;
+}
+
+.time {
+    color: darkgray;
+}
+
+.messageItems span {
+    color: deeppink;
+}
+
+.messageItems p {
+    color: azure;
+    line-height: 0;
+}
+
+
