--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -1,7 +1,45 @@
-.someClass {
-
+.someClass input {
+    padding: 5px;
+    font-size: 1.5em;
+    border-radius: 15px;
+    transition-duration: 1s;
 }
-
+.someClass input:hover{
+    background-color: blue;
+    color: hotpink;
+    transition-duration: 1s;
+}
+.someClass input:focus{
+    background-color: blue;
+    color: hotpink;
+}
+.someClass button {
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 1em;
+    background-color: yellow;
+    transition-duration: 1s;
+    margin-left: 10px;
+}
+.someClass button:hover{
+    background-color: blue;
+    color: hotpink;
+    transition-duration: 1s;
+}
 .error {
-    border: 1px solid red;
+    border: 3px solid red;
+}
+.good {
+    border: 3px solid green;
+}
+.badMessage{
+    background-color: red;
+    font-size: 1.5em;
+    border-radius: 10px;
+}
+.number{
+    margin-left: 10px;
+    font-size: 2em;
+    font-family: "Book Antiqua";
+    color: blue;
 }
