--- a/src/p1-main/m1-ui/u1-app/App.module.css
+++ b/src/p1-main/m1-ui/u1-app/App.module.css
@@ -1,3 +1,42 @@
 .App {
 
 }
+
+
+.links {
+    transform: translateX(-100%);
+    transition: 1s;
+    position: fixed;
+    background-color: skyblue;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 200px;
+    height: 200px;
+}
+
+.linksOpen {
+    transform: translateX(0%);
+    position: fixed;
+    transition: 1s;
+    background-color: skyblue;
+    width: 200px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.sss {
+    position: fixed;
+}
+
+.menu {
+    position: absolute;
+    top: -28px;
+    left: 150px;
+}
+.active{
+    color: gold;
+}
