--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,5 +1,10 @@
 .default {
     background: skyblue;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 10px;
+    outline: 0;
+    margin-right: 10px;
 }
 
 .red {
