--- a/src/p2-homeworks/h6/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/p2-homeworks/h6/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -6,3 +6,21 @@
 .divForSpan {
     margin: 10px;
 }
+
+.doubleClick {
+    display: none;
+}
+
+.message {
+    position: absolute;
+    width: 100px;
+    height: 50px;
+    background-color: skyblue;
+    color: white;
+    left: 750px;
+    border-radius: 10px;
+}
+.superSpan{
+    width: 150px;
+    margin: 0 auto;
+}
